...
              startingValue={this.state.averageRating}
              ratingCount={5}
              imageSize={23}
            />
          </View>
          <View style={styles.buttonsContainer}>
            <TouchableOpacity testID='profileBtn' style={styles.buttonFirst} onPress={() => this.props.navigation.navigate('Profile')}>
              <Text>My Profile</Text>
              <Icon library='AntDesign' name='caretright' />
            </TouchableOpacity>
            <TouchableOpacity testID='loginSecurityBtn' style={styles.button} onPress={() => this.props.navigation.navigate('Security')}>
              <Text>Login & Security</Text>
              <Icon library='AntDesign' name='caretright' />
            </TouchableOpacity>
            <TouchableOpacity testID='paymentBtn' style={styles.button} onPress={() => undefined}>
              <Text>Payments</Text>
              <Icon library='AntDesign' name='caretright' />
            </TouchableOpacity>
            <TouchableOpacity testID='ratingsBtn' style={styles.button} onPress={() => this.props.navigation.navigate('Ratings')}>
              <Text>Ratings</Text>
              <Icon library='AntDesign' name='caretright' />
            </TouchableOpacity>
            <TouchableOpacity testID='addressBtn' style={styles.buttonLast} onPress={() => undefined}>
              <Text>Your Addresses</Text>
              <Icon library='AntDesign' name='caretright' />
            </TouchableOpacity>
            <View style={{
              display: 'flex',
              alignItems: 'center',
...
