...
    paddingBottom: 10,
    fontSize: 20,
  },
  infoContainer: {
    padding: 10,
  },
  ratingItem: {
    padding: 10,
    borderBottomWidth: 1,
  },
  textContainer: {
    width: '80%',
  },
...
          </Button>
          <NotificationBell
            notifications={this.props.unseenNotificationsNumber}
            onPress={() => this.props.navigation.navigate('Notifications')}
          />
        </View>
        <Text style={styles.title}>Your Ratings</Text>
        <View style={styles.bodyContainer}>
          {this.state.ratings && this.state.ratings.length > 0 ? (
            <FlatList
              style={{ width: '100%' }}
              data={this.state.ratings}
              renderItem={this.renderItem}
...
